--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
   },
   "homepage": "https://github.com/doabit/vue-ssr-starter-kit#readme",
   "scripts": {
-    "start": "NODE_ENV=production node server",
+    "start": "cross-env NODE_ENV=production node server",
     "dev": "node server",
-    "build:client": "NODE_ENV=production webpack --config ./build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "NODE_ENV=production webpack --config ./build/webpack.server.config.js --progress --hide-modules",
-    "build": "npm run build:client && npm run build:server",
+    "build:client": "cross-env NODE_ENV=production webpack --config ./build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "cross-env NODE_ENV=production webpack --config ./build/webpack.server.config.js --progress --hide-modules",
+    "build": "rimraf dist && npm run build:client && npm run build:server",
     "unit": "karma start ./test/unit/karma.conf.js --single-run"
   },
   "dependencies": {
     "axios": "^0.13.1",
+    "cross-env": "^3.1.4",
     "express": "^4.14.0",
     "lru-cache": "^4.0.1",
     "serialize-javascript": "^1.3.0",
@@ -67,6 +68,7 @@
     "karma-webpack": "^1.8.0",
     "mocha": "^3.0.2",
     "phantomjs-prebuilt": "^2.1.10",
+    "rimraf": "^2.6.0",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
     "stylus": "^0.54.5",
