--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-stage-2": "^6.13.0",
     "chai": "^3.5.0",
     "css-loader": "^1.0.0",
+    "debug": "^2.6.9",
     "eslint": "^4.18.2",
     "eslint-config-standard": "^6.0.0-beta.2",
     "eslint-friendly-formatter": "^2.0.6",
@@ -57,7 +58,7 @@
     "eslint-plugin-html": "^3.0.2",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^2.0.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.3",
+    "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^3.2.0",
     "karma": "^3.0.0",
@@ -74,10 +75,9 @@
     "sinon": "^1.17.5",
     "sinon-chai": "^2.14.0",
     "stylus": "^0.54.5",
-    "debug": "^2.6.9",
     "stylus-loader": "^2.4.0",
     "sw-precache-webpack-plugin": "^0.9.1",
-    "vue-loader": "^10.0.0",
+    "vue-loader": "^12.0.0",
     "vue-ssr-webpack-plugin": "^1.0.2",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^2.2.1",
